# aiseg2-mcp

./: .env.example  Dockerfile  LICENSE  README.ja.md  README.md  pyproject.toml  server.json
.github/workflows/: build.yml  publish-registry.yml  release.yml  test.yml
aiseg2_mcp/: __init__.py  __main__.py  client.py  config.py  history.py  models.py  parsers.py  server.py
examples/remote/: .env.example  README.ja.md  README.md  docker-compose.yml
k8s/base/: aiseg2-mcp.yaml  kustomization.yaml
k8s/overlays/production/: .argocd-source-aiseg2-mcp.yaml  kustomization.yaml
tests/: conftest.py  test_client.py  test_history.py  test_parsers.py  test_server.py  test_tools.py
tests/fixtures/: electricflow_111.json  electricflow_1113_id1.html  electricflow_1113_id2.html  electricflow_1113_id3.html  electricflow_1113_id4.html  electricflow_1113_id5.html  empty_body_500.html  exectop2.html  graph_51111.html  graph_52111.html  graph_53111.html  graph_54111.html  installation_734.html
tests/fixtures/sd_zip/: 30minhistory_rc_20260412.csv  co2.conf  daycost_rc_202507.csv  dayhistory_rc_202507.csv  hourhistory_rc_20260412.csv  monthcost_rc_2025.csv  monthhistory_rc_2025.csv  yearcost_total_rc.csv  yearhistory_total_rc.csv
